--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,13 +5,59 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
+
+.header, 
+.footer{
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+}
+
+
+.content{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+.input{
+  margin-bottom: 16px;
+}
+
+.buttons{
+  display: flex;
+  gap: 16px;
+}
+
+.footer{
+  background-color: lightgray;
+}
 img {
   width: 600px;
 }
 
+ul{
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  gap: 16px
+  
+}
+
+a{
+  color: gray;
+  text-decoration: none;
+}
+
 button {
+  padding: 8px 16px;
   font-family: Roboto, sans-serif;
   border: none;
   border-radius: 8px;
